--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -1,5 +1,5 @@
-<ion-header-bar class="bar bar-calm">
-    <h1 class="title">Doctors</h1>
+<ion-header-bar class="bar bar-positive">
+    <h1 class="title title-center">Doctors</h1>
 </ion-header-bar>
 <ion-content>
     <ion-view view-title="Doctors">
@@ -16,9 +16,11 @@
         </ion-list>
     </ion-view>
 </ion-content>
-<div class="tabs tabs-icon-top">
-    <a class="tab-item"  href="#/doctorAdd">
-        <i class="icon ion-ios7-plus calm"></i>
-        Add Doctor
-    </a>
-</div>
+<ion-footer-bar keyboard-attach>
+    <div class="tabs tabs-icon-top">
+        <a class="tab-item" href="#/doctorAdd">
+            <i class="icon ion-ios7-plus positive"></i>
+            Add Doctor
+        </a>
+    </div>
+</ion-footer-bar>
