--- a/www/templates/patient-details.html
+++ b/www/templates/patient-details.html
@@ -1,5 +1,5 @@
-<ion-header-bar class="bar bar-calm">
-    <h1 class="title">{{patientDetails.name}}</h1>
+<ion-header-bar class="bar bar-positive">
+    <h1 class="title title-center">{{patientDetails.name}}</h1>
 </ion-header-bar>
 <ion-content>
     <ion-view view-title="DoctorDetails">
@@ -16,3 +16,27 @@
         </ion-list>
     </ion-view>
 </ion-content>
+<ion-footer-bar>
+    <div class="tabs tabs-icon-top">
+        <a class="tab-item" href="#/">
+            <i class="icon ion-ios7-home positive"></i>
+            Doctors
+        </a>
+        <a class="tab-item" href="#/">
+            <i class="icon ion-ios7-arrow-back positive"></i>
+            Patients
+        </a>
+        <a class="tab-item" ui-sref="add-patient({ doctorInd: doctorInde })">
+            <i class="icon ion-ios7-plus positive"></i>
+            Add Transaction
+        </a>
+        <a class="tab-item" href="#/">
+            <i class="icon ion-ios7-compose positive"></i>
+            Edit
+        </a>
+        <a class="tab-item" href="#/">
+            <i class="icon ion-ios7-trash assertive"></i>
+            Delete
+        </a>
+    </div>
+</ion-footer-bar>
