updated for form required

--- a/www/templates/addDoctor.html
+++ b/www/templates/addDoctor.html
@@ -3,23 +3,25 @@
 </ion-header-bar>
 <ion-content>
     <ion-view view-title="AddDoctor">
-        <div class="list">
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">First Name</span>
-                <input type="text" placeholder="Dr. John" required ng-model="doctor.firstname">
-            </label>
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">Last Name</span>
-                <input type="text" placeholder="Lewis" required ng-model="doctor.lastname">
-            </label>
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">Phone</span>
-                <input type="tel" placeholder="9876543210" required ng-model="doctor.tel">
-            </label>
-        </div>
-        <div class="padding">
-            <button class="button button-block button-calm" ng-click="addDoctor()">Add Doctor</button>
-        </div>
+        <form ng-submit="addDoctor()">
+            <div class="list">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">First Name</span>
+                    <input type="text" placeholder="Dr. John" required ng-model="doctor.firstname">
+                </label>
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Last Name</span>
+                    <input type="text" placeholder="Lewis" required ng-model="doctor.lastname">
+                </label>
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Phone</span>
+                    <input type="tel" placeholder="9876543210" required ng-model="doctor.tel">
+                </label>
+            </div>
+            <div class="padding">
+                <button class="button button-block button-calm" type="submit">Add Doctor</button>
+            </div>
+        </form>
     </ion-view>
 </ion-content>
 <ion-footer-bar>
