--- a/www/templates/addPatient.html
+++ b/www/templates/addPatient.html
@@ -3,23 +3,25 @@
 </ion-header-bar>
 <ion-content>
     <ion-view view-title="AddPatient">
-        <div class="list">
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">First Name</span>
-                <input type="text" placeholder="John" required ng-model="patient.firstname">
-            </label>
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">Last Name</span>
-                <input type="text" placeholder="Lewis" required ng-model="patient.lastname">
-            </label>
-            <label class="item item-input item-stacked-label">
-                <span class="input-label">Phone</span>
-                <input type="tel" placeholder="9876543210" required ng-model="patient.tel">
-            </label>
-        </div>
-        <div class="padding">
-            <button class="button button-block button-calm" ng-click="addPatient()">Add Patient</button>
-        </div>
+        <form ng-submit="addPatient()">
+            <div class="list">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">First Name</span>
+                    <input type="text" placeholder="John" required ng-model="patient.firstname">
+                </label>
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Last Name</span>
+                    <input type="text" placeholder="Lewis" required ng-model="patient.lastname">
+                </label>
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Phone</span>
+                    <input type="tel" placeholder="9876543210" required ng-model="patient.tel">
+                </label>
+            </div>
+            <div class="padding">
+                <button class="button button-block button-calm" type="submit">Add Patient</button>
+            </div>
+        </form>
     </ion-view>
 </ion-content>
 <ion-footer-bar>
