--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -1,20 +1,25 @@
-<ion-header-bar class="bar bar-positive">
-    <h1 class="title title-center">Doctors</h1>
-</ion-header-bar>
-<ion-content>
-    <ion-view view-title="Doctors">
-        <div class="list list-inset">
-            <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
-                <input type="text" ng-model="searchText" placeholder="Search">
+<ion-header-bar class="bar bar-positive item-input-inset">
+    <h1 class="title title-center" ng-if="!search.searchIcon">Doctors</h1>
+    <div class="row" ng-if="search.searchIcon">
+        <div class="col col-80">
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios7-search placeholder-icon"></i>
+                <input type="text" size="10" ng-model="search.searchText" placeholder="Search">
             </label>
         </div>
-        <ion-list>
-            <ion-item ng-repeat="doctor in allDocs | filter:searchText" href="#/doctor-patients/{{$index}}">
-                {{ doctor.name}}
-            </ion-item>
-        </ion-list>
-    </ion-view>
+        <div class="col col-20">
+            <button class="button button-clear button-dark pull-right" ng-click="searchClicked()">Cancel</button>
+        </div>
+    </div>
+    <button class="button button-icon icon ion-ios7-search-strong" ng-click="searchClicked()"
+            ng-if="!search.searchIcon"></button>
+</ion-header-bar>
+<ion-content class="mt20">
+    <ion-list>
+        <ion-item ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{$index}}">
+            {{ doctor.name}}
+        </ion-item>
+    </ion-list>
 </ion-content>
 <ion-footer-bar keyboard-attach>
     <div class="tabs tabs-icon-top">
