--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -1,25 +1,24 @@
 <ion-header-bar class="bar bar-positive item-input-inset">
     <h1 class="title title-center" ng-if="!search.searchIcon">Doctors</h1>
-    <div class="row" ng-if="search.searchIcon">
-        <div class="col col-80">
-            <label class="item-input-wrapper">
-                <i class="icon ion-ios7-search placeholder-icon"></i>
-                <input type="text" size="10" ng-model="search.searchText" placeholder="Search">
-            </label>
-        </div>
-        <div class="col col-20">
-            <button class="button button-clear button-dark pull-right" ng-click="searchClicked()">Cancel</button>
-        </div>
+
+    <div class="bar bar-header item-input-inset bar-positive" ng-if="search.searchIcon">
+        <label class="item-input-wrapper">
+            <i class="icon ion-ios7-search placeholder-icon"></i>
+            <input type="search" class="positive" ng-model="search.searchText" placeholder="Search">
+        </label>
+        <button class="button button-clear" ng-click="searchClicked()">
+            Cancel
+        </button>
     </div>
-    <button class="button button-icon icon ion-ios7-search-strong" ng-click="searchClicked()"
+    <button class="button button-icon icon  ion-ios7-search-strong" ng-click="searchClicked()"
             ng-if="!search.searchIcon"></button>
 </ion-header-bar>
 <ion-content class="mt20">
-    <ion-list>
-        <ion-item ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{$index}}">
-            {{ doctor.name}}
-        </ion-item>
-    </ion-list>
+    <div class="list card">
+        <a ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{$index}}" class="item item-icon-left">
+            <i class="icon ion-person"></i>{{ doctor.name}}
+        </a>
+    </div>
 </ion-content>
 <ion-footer-bar keyboard-attach>
     <div class="tabs tabs-icon-top">
