firebase integration done for doctors and patients

--- a/www/templates/addPatient.html
+++ b/www/templates/addPatient.html
@@ -8,12 +8,8 @@
         <form ng-submit="addPatient()">
             <div class="list">
                 <label class="item item-input">
-                    <span class="input-label">First Name</span>
-                    <input type="text" placeholder="John" required ng-model="patient.firstname">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Last Name</span>
-                    <input type="text" placeholder="Lewis" required ng-model="patient.lastname">
+                    <span class="input-label">Name</span>
+                    <input type="text" placeholder="John" required ng-model="patient.name">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Illness</span>
