--- a/www/templates/addDoctor.html
+++ b/www/templates/addDoctor.html
@@ -6,12 +6,12 @@
         <form ng-submit="addDoctor()">
             <div class="list">
                 <label class="item item-input">
-                    <span class="input-label">First Name</span>
-                    <input type="text" placeholder="Dr. John" required ng-model="doctor.firstname">
+                    <span class="input-label">Name</span>
+                    <input type="text" placeholder="Dr. John" required ng-model="doctor.name">
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Last Name</span>
-                    <input type="text" placeholder="Lewis" required ng-model="doctor.lastname">
+                    <span class="input-label">Address</span>
+                    <input type="text" placeholder="Aundh" required ng-model="doctor.address">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Phone</span>
