--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -14,7 +14,7 @@
 </ion-header-bar>
 <ion-content class="mt20">
     <div class="list card">
-        <a ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{$index}}" class="item item-icon-left">
+        <a ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{doctor.$id}}" class="item item-icon-left">
             <i class="icon ion-person"></i>{{ doctor.name}}
         </a>
     </div>
