delete functionality for doctors and patients

--- a/www/templates/patient-details.html
+++ b/www/templates/patient-details.html
@@ -91,7 +91,7 @@
             <i class="icon ion-ios7-compose positive"></i>
             Edit
         </a>
-        <a class="tab-item" href="#/">
+        <a class="tab-item" href="#/doctor-patients/{{doctorIndex}}" ng-click="patientfunc.removePat(patientInd,doctorIndex);">
             <i class="icon ion-ios7-trash assertive"></i>
             Delete
         </a>
