--- a/www/templates/doctor-patients.html
+++ b/www/templates/doctor-patients.html
@@ -50,7 +50,7 @@
             <i class="icon ion-ios7-compose positive"></i>
             Edit
         </a>
-        <a class="tab-item" href="#/">
+        <a class="tab-item" ng-click="doctorfunc.removeDoc(doctorInde);" href="#/">
             <i class="icon ion-ios7-trash assertive"></i>
             Delete
         </a>
