--- a/www/templates/doctor-patients.html
+++ b/www/templates/doctor-patients.html
@@ -46,7 +46,7 @@
             <i class="icon ion-ios7-plus positive"></i>
             Add Patient
         </a>
-        <a class="tab-item" href="#/">
+        <a class="tab-item" href="#/editDoctor/{{doctorInde}}">
             <i class="icon ion-ios7-compose positive"></i>
             Edit
         </a>
