--- a/www/templates/patient-details.html
+++ b/www/templates/patient-details.html
@@ -87,7 +87,7 @@
             <i class="icon ion-ios7-plus positive"></i>
             Add Transaction
         </a>
-        <a class="tab-item" href="#/">
+        <a class="tab-item" href="#/editPatient/{{patientInd}}/{{doctorIndex}}">
             <i class="icon ion-ios7-compose positive"></i>
             Edit
         </a>
