--- a/www/templates/addPatient.html
+++ b/www/templates/addPatient.html
@@ -1,11 +1,11 @@
 <ion-header-bar class="bar bar-positive">
     <a href="#/doctor-patients/{{doctorInde}}" class="button button-icon ion-ios7-arrow-back">
     </a>
-    <h1 class="title ml70">Add Patient</h1>
+    <h1 class="title ml70">{{txtFields.header}}</h1>
 </ion-header-bar>
 <ion-content class="mt20">
     <ion-view view-title="AddPatient">
-        <form ng-submit="addPatient()">
+        <form ng-submit="patFuncs.buttonAction()">
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Name</span>
@@ -25,11 +25,11 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Phone</span>
-                    <input type="tel" placeholder="9876543210" required ng-model="patient.tel">
+                    <input type="tel" placeholder="9876543210" required ng-model="patient.phone">
                 </label>
             </div>
             <div class="padding">
-                <button class="button button-block button-positive" type="submit">Add Patient</button>
+                <button class="button button-block button-positive" type="submit">{{txtFields.buttonTxt}}</button>
             </div>
         </form>
     </ion-view>
