changes to add modules

--- a/www/templates/addPatient.html
+++ b/www/templates/addPatient.html
@@ -17,15 +17,19 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Start Date</span>
-                    <input type="text" placeholder="12/12/2012" required ng-model="patient.startDate">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">End Date</span>
-                    <input type="text" placeholder="12/12/2012" required ng-model="patient.endDate">
+                    <input type="tel" placeholder="12-12-2012" required ng-model="patient.startDate">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Phone</span>
                     <input type="tel" placeholder="9876543210" required ng-model="patient.phone">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Fees</span>
+                    <input type="tel" placeholder="Treatment Fees" required ng-model="patient.fees">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Share</span>
+                    <input type="tel" placeholder="Doctor's Share" required ng-model="patient.share">
                 </label>
             </div>
             <div class="padding">
