--- a/www/templates/patient-details.html
+++ b/www/templates/patient-details.html
@@ -24,7 +24,7 @@
                 <div class="col-50">
                     <div class="item item-icon-left">
                         <i class="icon ion-cash"></i>
-                        Rs. {{patientDetails.amount}}
+                        Rs. {{patientDetails.fees}}
                     </div>
                 </div>
                 <div class="col-50">
@@ -41,12 +41,12 @@
                         {{patientDetails.startDate}}
                     </div>
                 </div>
-                <div class="col-50">
+                <!--<div class="col-50">
                     <div class="item item-icon-left">
                         <i class="icon ion-calendar"></i>
                         {{patientDetails.endDate}}
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
         <ion-list class="mt20">
