--- a/www/templates/addTxn.html
+++ b/www/templates/addTxn.html
@@ -8,20 +8,24 @@
         <form name="form" ng-submit="addTxn()">
             <div class="list">
                     <ion-toggle ng-model="txn.payment" toggle-class="toggle-positive">Txn Type (Payment / Receipt)</ion-toggle>
-                <label class="item item-input">
-                    <span class="input-label">Txn Date</span>
+                <label class="item item-input item-icon-left">
+                    <i class="icon ion-calendar"></i>
+                    <span class="input-label ml35">Txn Date</span>
                     <input type="tel" placeholder="12-12-2012" ng-required="true" ng-model="txn.date">
                 </label>
-                <label class="item item-input">
-                    <span class="input-label">By Patient</span>
+                <label class="item item-input item-icon-left">
+                    <i class="icon ion-man"></i>
+                    <span class="input-label ml35">By Patient</span>
                     <input type="tel" placeholder="5000" ng-required='!txn.visdoc && !txn.material' ng-model="txn.patient">
                 </label>
-                <label class="item item-input">
-                    <span class="input-label">Material</span>
+                <label class="item item-input item-icon-left">
+                    <i class="icon ion-flask"></i>
+                    <span class="input-label ml35">Material</span>
                     <input type="tel" placeholder="3000" ng-required='!txn.patient && !txn.visdoc' ng-model="txn.material">
                 </label>
-                <label class="item item-input">
-                    <span class="input-label">Visiting Doc</span>
+                <label class="item item-input item-icon-left">
+                    <i class="icon ion-android-contacts"></i>
+                    <span class="input-label ml35"> Visiting Doc</span>
                     <input type="tel" placeholder="2000" ng-required='!txn.patient && !txn.material' ng-model="txn.visdoc">
                 </label>
             </div>
